--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
 
-  <groupId>edu.matc.entjava.VideoSensei</groupId>
-  <artifactId>VideoSensei</artifactId>
+  <groupId>edu.matc.entjava.SalonSolutions</groupId>
+  <artifactId>SalonSolutions</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>VideoSensei Maven Webapp</name>
+  <name>SalonSolutions Maven Webapp</name>
   <url>http://www.matthewbhill.com</url>
 
   <properties>
@@ -93,7 +93,7 @@
   </dependencies>
 
   <build>
-    <finalName>VideoSensei</finalName>
+    <finalName>SalonSolutions</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
