--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,4 @@ crashlytics-build.properties
 fabric.properties
 
 # Database Properties:
-src/main/resources/database.properties
+database.properties
