Tests gitIgnore functionality with database.properties file

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -4,3 +4,5 @@ driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/SalonSolutions
 username=root
 password=student
+
+//Testing git ignore status
