Adds Week 8 Activity 2 & 3 classes, as well as Week 8 Exercise GoogleCalendarAPI POJO and test classes, as well as screenshot showing passing test

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 .idea/gradle.xml
 .idea/libraries
 
+# GoogleCalendar API Credentials
+credentials.json
+
 # Mongo Explorer plugin:
 .idea/mongoSettings.xml
 
