--- a/.github/workflows/mavenSalonSolutionsBuild.yml
+++ b/.github/workflows/mavenSalonSolutionsBuild.yml
@@ -22,3 +22,5 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Deploy to Tomcat
       run: curl -v -u ${{ secrets.TOMCAT_USERNAME_SALON_SOLUTIONS }}:${{ secrets.TOMCAT_PASSWORD_SALON_SOLUTIONS }} -T ${{ secrets.WAR_FILE_PATH }} ${{ secrets.AMAZON_EC2_INDIEREPO_ADDRESS }}
+    - name: tomcat reload
+      run: curl -v -u ${{ secrets.TOMCAT_USERNAME_SALON_SOLUTIONS }}:${{ secrets.TOMCAT_PASSWORD_SALON_SOLUTIONS }} ${{ secrets.AMAZON_EC2_INDIEREPO_RELOAD_ADDRESS }}
