Alters name of main UserTestClass to GenericDaoTest.java and will continue to add more tests to said class.  Also appended JDBC connection strings with serverTimezone=UTC for database.properties, hibernate.cfg.xml and context.xml files in order to solve a time-discrepancy issue between mysql server and system time following Spring 2020 Daylight Savings Time Change

--- a/Gradle/build.gradle
+++ b/Gradle/build.gradle
@@ -1,5 +1,5 @@
 
-apply plugin: 'java'
+/*apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = 'com.google.CalendarQuickstart'
@@ -20,7 +20,7 @@ apply plugin: 'maven'
 
 group = 'com.company.root'
 // artifactId is taken by default, from folder name
-version = '0.0.1-SNAPSHOT'
+/version = '0.0.1-SNAPSHOT'
 
 task writeNewPom << {
     pom {
@@ -35,4 +35,4 @@ task writeNewPom << {
             }
         }
     }.writeTo("pom.xml")
-}
+}*/
