--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>war</packaging>
 
   <name>SalonSolutions Maven Webapp</name>
-  <url>http://www.matthewbhill.com</url>
+  <url>http://www.mysalonsolutions.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,7 +21,7 @@
     <junit.version>4.12</junit.version>
     <junit-vintage-version>4.12.0</junit-vintage-version>
     <javax.version>7.0</javax.version>
-    <mysql-version>8.0.16</mysql-version>
+    <mysql-version>8.0.18</mysql-version>
     <jstl-version>1.2</jstl-version>
     <log4j-version>2.10.0</log4j-version>
     <jupiter-version>5.0.0</jupiter-version>
