--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,10 +15,10 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 
 loggers=file
 logger.file.name=edu.matc
-logger.file.level = debug
+logger.file.level = verbose
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 
-rootLogger.level = debug
+rootLogger.level = verbose
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
