--- a/pom.xml
+++ b/pom.xml
@@ -14,24 +14,34 @@
   <url>http://www.mysalonsolutions.com</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <google-gson-version>2.2.2</google-gson-version>
+    <google-oauth-client-jetty-version>1.19.0</google-oauth-client-jetty-version>
+    <google-api-client-version>1.30.0</google-api-client-version>
+    <google-api-services-plus-version>v1-rev530-1.23.0</google-api-services-plus-version>
+    <google-apis-version>v3-rev20200428-1.30.9</google-apis-version>
+    <google-api-services-sql-version>v1beta3-rev25-1.19.0</google-api-services-sql-version>
+    <hibernate-version>5.4.4.Final</hibernate-version>
+    <jackson-version>2.10.0</jackson-version>
+    <javax.version>7.0</javax.version>
+    <jersey-version>2.29.1</jersey-version>
+    <jstl-version>1.2</jstl-version>
+    <junit-platform-runner-version>1.0.0</junit-platform-runner-version>
+    <junit.version>4.12</junit.version>
+    <junit-vintage-version>4.12.0</junit-vintage-version>
+    <jupiter-version>5.0.0</jupiter-version>
+    <log4j-version>2.10.0</log4j-version>
+    <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.release>11</maven.compiler.release>
-    <junit.version>4.12</junit.version>
-    <junit-vintage-version>4.12.0</junit-vintage-version>
-    <javax.version>7.0</javax.version>
-    <mysql-version>8.0.18</mysql-version>
-    <jstl-version>1.2</jstl-version>
-    <log4j-version>2.10.0</log4j-version>
-    <jupiter-version>5.0.0</jupiter-version>
-    <hibernate-version>5.4.4.Final</hibernate-version>
-    <junit-platform-runner-version>1.0.0</junit-platform-runner-version>
     <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
-    <maven-surefire-plugin-version>2.19</maven-surefire-plugin-version>
-    <jackson-version>2.10.0</jackson-version>
-    <jersey-version>2.29.1</jersey-version>
-    <generic-dao-version>0.11.0</generic-dao-version>
+    <maven-deploy-plugin-version>2.8.2</maven-deploy-plugin-version>
+    <maven-install-plugin-version>2.5.2</maven-install-plugin-version>
+    <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
+    <maven-resources-plugin-version>3.0.2</maven-resources-plugin-version>
+    <maven-war-plugin-version>3.2.2</maven-war-plugin-version>
+    <mysql-version>8.0.18</mysql-version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -138,27 +148,90 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-calendar</artifactId>
-      <version>v3-rev411-1.25.0</version>
+      <version>${google-apis-version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
-      <version>1.25.0</version>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-servlet</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-appengine</artifactId>
+      <version>${google-api-client-version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.oauth-client</groupId>
       <artifactId>google-oauth-client-jetty</artifactId>
-      <version>1.25.0</version>
+      <version>${google-oauth-client-jetty-version}</version>
     </dependency>
 
     <!--  Gson: Java to Json conversion -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.2.2</version>
+      <version>${google-gson-version}</version>
       <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-jackson2</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-java6</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+      <dependency>
+        <groupId>com.google.api-client</groupId>
+        <artifactId>google-api-client-protobuf</artifactId>
+        <version>${google-api-client-version}</version>
+      </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-xml</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-sqladmin -->
+
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-calendar</artifactId>
+      <version>${google-apis-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-sqladmin -->
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-sqladmin</artifactId>
+      <version>${google-api-services-sql-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-plus</artifactId>
+      <version>${google-api-services-plus-version}</version>
     </dependency>
   </dependencies>
 
@@ -168,32 +241,32 @@
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>${maven-clean-plugin-version}</version>
         </plugin>
         <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>${maven-resources-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>${maven-compiler-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>${maven-surefire-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>${maven-war-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>${maven-install-plugin-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>${maven-deploy-plugin-version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
