--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,17 +14,65 @@
             <form-error-page>/loginError.jsp</form-error-page>
         </form-login-config>
     </login-config>
-    <!-- Protect the user search page. -->
+    <!-- Protect the admin resources page. -->
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>search</web-resource-name>
-            <url-pattern>/search.jsp</url-pattern>
+            <url-pattern>/adminResources/search.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>searchUsers</web-resource-name>
+            <url-pattern>/searchUsers</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>results</web-resource-name>
+            <url-pattern>/adminResources/results.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>editUser</web-resource-name>
+            <url-pattern>/adminResources/editUser.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>editUserController</web-resource-name>
+            <url-pattern>/editUser</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>services</web-resource-name>
+            <url-pattern>/adminResources/services.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>addService</web-resource-name>
+            <url-pattern>/adminResources//addService</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>editProfile</web-resource-name>
+            <url-pattern>/editProfile.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>makeReservation</web-resource-name>
+            <url-pattern>/makeReservation.jsp</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>reservations</web-resource-name>
+            <url-pattern>/reservations</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>loadAccount</web-resource-name>
+            <url-pattern>/loadAccount</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>guest</role-name>
+        </auth-constraint>
+    </security-constraint>
     <security-role>
         <role-name>admin</role-name>
+    </security-role>
+    <security-role>
+        <role-name>guest</role-name>
     </security-role>
 </web-app>
